[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/blocks/mystery_block1.png" type="Texture" id=4]
[ext_resource path="res://scripts/props/block.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/blocks/block.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/sounds/bump.wav" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/sounds/coin.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "empty",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 27.9971 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 2 )

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ), Vector2( 0, 0 ) ]
}

[node name="block" type="StaticBody2D"]
position = Vector2( 0, 500 )
collision_layer = 2
collision_mask = 49
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="solid" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="bottom_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="hitbox" type="CollisionShape2D" parent="bottom_checker"]
position = Vector2( 0, 30 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/block_punch = SubResource( 4 )

[node name="CoinCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 1.0

[node name="BumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[connection signal="body_entered" from="bottom_checker" to="." method="_on_bottom_checker_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
